--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -89,3 +89,30 @@ p {
     }
 }
 
+.card-linkedin-link {
+    position: relative;
+    display: inline-block;
+    &::after{
+        content: "";
+        display: inline-block;
+        position: absolute;
+        bottom: 5px;
+        right: 10px;
+        width: 120px;
+        height: 30px;
+        background-image: url("../images/linkedin-logo.png");
+        background-size: cover;
+    }
+    &::before{
+        content: "";
+        display: inline-block;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 140px;
+        height: 40px;
+        background-color: white;
+        border-top-left-radius: 5px;
+    }
+}
+
